--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,7 @@ jobs:
           fetch-depth: 0 
           
       - name: ⚙️ Manual Git Clone and Environment Setup (Final Working Sourcing)
-        # We must explicitly use 'bash' because the 'zephyr-env.sh' script contains 
-        # advanced shell substitutions not supported by the default 'dash' shell.
+        # Final fix: Use bash shell for sourcing zephyr-env.sh
         shell: bash
         run: |
           # --- Dependencies and Versions ---
@@ -50,19 +49,34 @@ jobs:
           echo "--- 4. Cloning MCUBoot (Path: zmk/bootloader/mcuboot) ---"
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$GITHUB_WORKSPACE/zmk/bootloader/mcuboot" || exit 1
 
-          # 5. Sourcing Zephyr Environment (FINAL FIX: This now runs under bash)
+          # 5. Sourcing Zephyr Environment
           echo "--- 5. Sourcing Zephyr Environment Variables ---"
-          # Sourcing with '.' is critical to keep the variables in the current shell session
-          . "$GITHUB_WORKSPACE/zmk/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed. Check script syntax."; exit 1; }
+          . "$GITHUB_WORKSPACE/zmk/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
           # 6. Build
           echo "--- 6. Starting Final West Build ---"
-          # Navigate into the ZMK application root for the build command
           cd "$GITHUB_WORKSPACE/zmk/app" || exit 1
 
-          west build -b nice_nano_v2 -- -DSHIELD=crkbd_left -DZMK_CONFIG="$GITHUB_WORKSPACE/config" || { echo "FATAL: Build failed. Review CMake output for compilation errors."; exit 1; }      - name: ⬆️ Upload Artifacts
+          west build -b nice_nano_v2 -- -DSHIELD=crkbd_left -DZMK_CONFIG="$GITHUB_WORKSPACE/config" || { echo "FATAL: Build failed. Review CMake output for compilation errors."; exit 1; }
+          
+      - name: ⬆️ Upload Artifacts
         uses: actions/upload-artifact@v4
         if: success()
         with:
-          name: zmk-firmware
-          path: zmk/app/build/zephyr/zmk.uf2
+          name: zmk-firmware # Name for the artifact
+          path: zmk/app/build/zephyr/zmk.uf2 # Path to the firmware file
+
+  artifact:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    # ⚠️ THIS SECTION MUST BE CORRECTLY INDENTED ⚠️
+    steps:
+      - name: ⬇️ Download Final Firmware Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: zmk-firmware # Must match the name used in the upload step
+          path: ./firmware-artifacts
+          
+      - name: 📦 Display Artifact Contents
+        run: ls -lR ./firmware-artifacts
